color change and adding css for gif

--- a/nav.html
+++ b/nav.html
@@ -21,6 +21,6 @@
       </nav>
     </header>
     <h2>Hi welcome to my project one!!!</h2>
-    <img src="pics/catwave.jpg" alt="Welcome">
+    <img id="cat-wave" src="pics/catwave.jpg" alt="Welcome">
 </body>
 </html>
