--- a/nav.html
+++ b/nav.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link href="https://fonts.googleapis.com/css2?family=Lilita+One&amp;display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Rubik+Puddles&amp;display=swap" rel="stylesheet">
 </head>
 <body id="nav-body">
   <header>  
