--- a/resume.html
+++ b/resume.html
@@ -22,8 +22,10 @@
     </header>
 	<h3>Resume</h3>
 	<h3>Althea Barbato</h3>
-	<p>Contact Info Email:abarbato@hawk.iit.edu Phone Number:224.xxx.xxxx</p>
+    <section id="contact-info">
+    <p>Contact Info Email:abarbato@hawk.iit.edu Phone Number:224.xxx.xxxx</p>
 	<p>Address:222 Slay Lane,San Fransico CA 60012</p>
+    </section>
 	
 	<h3>Skills</h3>
 	
