--- a/hobbies.html
+++ b/hobbies.html
@@ -21,9 +21,11 @@
       </nav>
     </header>
     <h3>My Hobbies</h3>
+    <div class="infoCol1 gradient">
 	<h4>Cooking</h4>
 	<p>I love cooking some of my favorite things to cook are pasta,fresh bread and new vegetarian recipes</p> 
-	<h4>Resturant exploring</h4>
+	</div>
+    <h4>Resturant exploring</h4>
     <p>My most favortie thing to do is go out to eat. Some of my favorties resuturants right now are...Planta Queen, Alla Vita, Duck Duck Goat and Ken Kee</p>
         <img src="pics/friends.JPG" alt="Friends out eating">
         <img src="pics/sushi.JPG" alt="Cool Veggie sushi">
