--- a/hobbies.html
+++ b/hobbies.html
@@ -25,7 +25,7 @@
 	<h4>Cooking</h4>
 	<p>I love cooking some of my favorite things to cook are pasta,fresh bread and new vegetarian recipes</p> 
 	</div>
-    <div class="info-box-2">
+    <div class="info-box-2 gradient">
     <h4>Resturant exploring</h4>
     <p>My most favortie thing to do is go out to eat. Some of my favorties resuturants right now are...Planta Queen, Alla Vita, Duck Duck Goat and Ken Kee</p>
     </div> 
