--- a/hobbies.html
+++ b/hobbies.html
@@ -29,12 +29,12 @@
     <h4>Resturant exploring</h4>
     <p>My most favortie thing to do is go out to eat. Some of my favorties resuturants right now are...Planta Queen, Alla Vita, Duck Duck Goat and Ken Kee</p>
     </div> 
-        <img src="pics/friends.JPG" alt="Friends out eating">
-        <img src="pics/sushi.JPG" alt="Cool Veggie sushi">
-        <img src="pics/ramen.JPG" alt="Bowl of ramen">
-        <img src="pics/pasta.jpg" alt="Bowl of vodka pasta">
-        <img src="pics/veggie.jpg" alt="Fried cauliflower">
-        <img src="pics/piggy.JPG" alt="Yummy piggy buns">
+        <img class="foodimg" src="pics/friends.JPG" alt="Friends out eating">
+        <img class="foodimg" src="pics/sushi.JPG" alt="Cool Veggie sushi">
+        <img class="foodimg" src="pics/ramen.JPG" alt="Bowl of ramen">
+        <img class="foodimg" src="pics/pasta.jpg" alt="Bowl of vodka pasta">
+        <img class="foodimg" src="pics/veggie.jpg" alt="Fried cauliflower">
+        <img class="foodimg" src="pics/piggy.JPG" alt="Yummy piggy buns">
     <h4>Movies and Shows</h4>
     <p>I love watching movies. Some of my favorites are LaLa Land, Star Wars, any Wes Anderson movie and Studio Ghibli movies.</p>
     <p>I'm not so good at watching shows beacuse I never finish them. I love home renovation shows, Community and MoonKnight</p>
