--- a/nav.html
+++ b/nav.html
@@ -20,7 +20,9 @@
         </div>
       </nav>
     </header>
+    <section id="heading-info">
     <h2>Hi welcome to my project one!!!</h2>
     <img id="cat-wave" src="pics/catwave.jpg" alt="Welcome">
+    </section
 </body>
 </html>
