--- a/nav.html
+++ b/nav.html
@@ -23,6 +23,6 @@
     <section id="heading-info">
     <h2>Hi welcome to my project one!!!</h2>
     <img id="cat-wave" src="pics/catwave.jpg" alt="Welcome">
-    </section
+    </section>
 </body>
 </html>
