--- a/nav.html
+++ b/nav.html
@@ -23,6 +23,6 @@
     <section id="heading-info">
     <h2>Hi welcome to my project one!!!</h2>
     </section>
-    <img id="cat-wave" src="pics/catwave.jpg" alt="Welcome">
+    <img id="cat-img" src="pics/catwave.jpg" alt="Welcome">
 </body>
 </html>
