--- a/nav.html
+++ b/nav.html
@@ -24,5 +24,10 @@
     <h2>Hi welcome to my project one!!!</h2>
     </section>
     <img id="cat-img" src="pics/catwave.jpg" alt="Welcome">
+    <div class="info-box-3 gradient">
+    <p>My name is Althea Barbato!</p>
+    <p>I am a first year ITM student from Chicago</p>
+    <p>Hope you enjoy my project</p>
+    </div>
 </body>
 </html>
