adding box for resume and fixing spacing

--- a/resume.html
+++ b/resume.html
@@ -25,7 +25,9 @@
     <p>Contact Info Email:abarbato@hawk.iit.edu Phone Number:224.xxx.xxxx</p>
 	<p>Address:222 Slay Lane,San Fransico CA 60012</p>
     </section>
-	
+		
+    <section id="all-info">
+
 	<h3>Skills</h3>
 	
 	<ul>
@@ -84,5 +86,6 @@
 	  <li>National Honors Society</li>
 	  <li>CUM Laude</li>
 	</ul>
+    </section>
 </body>
 </html>
