--- a/resume.html
+++ b/resume.html
@@ -26,7 +26,7 @@
 	<p>Address:222 Slay Lane,San Fransico CA 60012</p>
     </section>
 		
-    <section id="all-info">
+    <div class="all-info gradient">
 
 	<h3>Skills</h3>
 	
@@ -86,6 +86,6 @@
 	  <li>National Honors Society</li>
 	  <li>CUM Laude</li>
 	</ul>
-    </section>
+    </div>
 </body>
 </html>
