adding css for cat img

--- a/cat.html
+++ b/cat.html
@@ -25,8 +25,8 @@
     <p>We got my cat about two years ago from a pound. He was the last kitten in his litter and a runt.</p>
     <p>I got him for Chirstmas, his origanal name was Christams Tree!</p>
     <p>He loves napping and playing outside with my dog Biscuit. Also hiding in boxes!</p>
-	<img src="pics/kitty1.jpg" alt="Cute Kitty">
-	<img src="pics/kittyeyes.JPG" alt="Tiny kitty in a glass">
-	<img src="pics/bigkitty.jpg" alt="Bigger kitty smiling">
+	<img class="cat-img" src="pics/kitty1.jpg" alt="Cute Kitty">
+	<img class="cat-img" src="pics/kittyeyes.JPG" alt="Tiny kitty in a glass">
+	<img class="cat-img" src="pics/bigkitty.jpg" alt="Bigger kitty smiling">
 </body>
 </html> 
