--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,7 @@
       <nav id="main-navbar">
         <div id="navbar-container">
           <ul>
-            <li id="onpage"><a href="#">Home</a></li>
+            <li><a href="nav.html">>Home</a></li>
             <li id="onpage"><a href="#">Resume</a></li>
             <li><a href="cat.html">My Cat</a></li>
             <li><a href="hobbies.html">Hobbies</a></li>
