--- a/nav.html
+++ b/nav.html
@@ -23,11 +23,13 @@
     <section id="heading-info">
     <h2>Hi welcome to my project one!!!</h2>
     </section>
+    <div class="section1">
     <img id="cat-img" src="pics/catwave.jpg" alt="Welcome">
     <section id="name-info">
     <p>My name is Althea Barbato!</p>
     <p>I am a first year ITM student from Chicago</p>
     <p>Hope you enjoy my project</p>
     </section>
+    </div>
 </body>
 </html>
