--- a/hobbies.html
+++ b/hobbies.html
@@ -21,14 +21,12 @@
       </nav>
     </header>
     <h3>My Hobbies</h3>
-    <div class="info-box-1 gradient">
-	<h4>Cooking</h4>
+	<section id="food-section">
+    <h4>Cooking</h4>
 	<p>I love cooking some of my favorite things to cook are pasta,fresh bread and new vegetarian recipes</p> 
-	</div>
-    <div class="info-box-2 gradient">
+    </section>
     <h4>Resturant exploring</h4>
     <p>My most favortie thing to do is go out to eat. Some of my favorties resuturants right now are...Planta Queen, Alla Vita, Duck Duck Goat and Ken Kee</p>
-    </div> 
         <img class="food-img" src="pics/friends.JPG" alt="Friends out eating">
         <img class="food-img" src="pics/sushi.JPG" alt="Cool Veggie sushi">
         <img class="food-img" src="pics/ramen.JPG" alt="Bowl of ramen">
