--- a/hobbies.html
+++ b/hobbies.html
@@ -25,6 +25,7 @@
     <h4>Cooking</h4>
 	<p>I love cooking some of my favorite things to cook are pasta,fresh bread and new vegetarian recipes</p> 
     </section>
+    <section id="eating-section">
     <h4>Resturant exploring</h4>
     <p>My most favortie thing to do is go out to eat. Some of my favorties resuturants right now are...Planta Queen, Alla Vita, Duck Duck Goat and Ken Kee</p>
         <img class="food-img" src="pics/friends.JPG" alt="Friends out eating">
@@ -33,6 +34,7 @@
         <img class="food-img" src="pics/pasta.jpg" alt="Bowl of vodka pasta">
         <img class="food-img" src="pics/veggie.jpg" alt="Fried cauliflower">
         <img class="food-img" src="pics/piggy.JPG" alt="Yummy piggy buns">
+    </section>
     <h4>Movies and Shows</h4>
     <p>I love watching movies. Some of my favorites are LaLa Land, Star Wars, any Wes Anderson movie and Studio Ghibli movies.</p>
     <p>I'm not so good at watching shows beacuse I never finish them. I love home renovation shows, Community and MoonKnight</p>
