--- a/hobbies.html
+++ b/hobbies.html
@@ -41,12 +41,12 @@
     <section id="travelling-section">
     <h4>Traveling</h4>
 	<p>Traveling is probably my favorite thing to do. I have been all over! My favorites recently being; Italy, Germany and Greece</p>
-		<img src="pics/plane.jpg" alt="Plane with clouds">
+		<img class="plane-img"src="pics/plane.jpg" alt="Plane with clouds">
     </section>
     <section id="music-section">
 	<h4>Music</h4>
 	<p>I love music, some of my favorite artists are... Tyler the Creator, the Marias, TV Girl and Crumb</p>
-	<iframe width="770" height="433" src="https://www.youtube.com/embed/9JQDPjpfiGw" title="A BOY IS A GUN*" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+	<iframe class="music-img" src="https://www.youtube.com/embed/9JQDPjpfiGw" title="A BOY IS A GUN*" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </section>
 </body>
 </html>
