--- a/cat.html
+++ b/cat.html
@@ -20,11 +20,13 @@
         </div>
       </nav>
     </header>
+    <section id="cat-section">
 	<h2>My Kitty!</h2>
 	<h3>This is my kitty Benji! He is a black cat and very goofy!</h3>
     <p>We got my cat about two years ago from a pound. He was the last kitten in his litter and a runt.</p>
     <p>I got him for Chirstmas, his origanal name was Christams Tree!</p>
     <p>He loves napping and playing outside with my dog Biscuit. Also hiding in boxes!</p>
+    </section>
 	<img class="cat-img" src="pics/kitty1.jpg" alt="Cute Kitty">
 	<img class="cat-img" src="pics/kittyeyes.JPG" alt="Tiny kitty in a glass">
 	<img class="cat-img" src="pics/bigkitty.jpg" alt="Bigger kitty smiling">
