--- a/hobbies.html
+++ b/hobbies.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link href="https://fonts.googleapis.com/css2?family=Lilita+One&amp;display=swap" rel="stylesheet">
 </head>
-<body>
+<body id="hobbie-body">
   <header>  
       <nav id="main-navbar">
         <div id="navbar-container">
