--- a/hobbies.html
+++ b/hobbies.html
@@ -20,7 +20,9 @@
         </div>
       </nav>
     </header>
+    <section id="hobbies-section">
     <h3>My Hobbies</h3>
+    </section>
 	<section id="food-section">
     <h4>Cooking</h4>
 	<p>I love cooking some of my favorite things to cook are pasta,fresh bread and new vegetarian recipes</p> 
