--- a/nav.html
+++ b/nav.html
@@ -26,7 +26,7 @@
     <div class="section1">
     <img id="cat-img" src="pics/catwave.jpg" alt="Welcome">
     <section id="name-info">
-    <p>My name is Althea Barbato!</p>
+    <h3>My name is Althea Barbato!</h3>
     <p>I am a first year ITM student from Chicago</p>
     <p>Hope you enjoy my project</p>
     </section>
