--- a/cat.html
+++ b/cat.html
@@ -28,7 +28,7 @@
     <p>He loves napping and playing outside with my dog Biscuit. Also hiding in boxes!</p>
     </section>
 	<img class="cat-img" src="pics/kitty1.jpg" alt="Cute Kitty">
-	<img class="cat-img" src="pics/kittyeyes.JPG" alt="Tiny kitty in a glass">
+	<img class="cat-img" src="pics/kittyeyes.jpg" alt="Tiny kitty in a glass">
 	<img class="cat-img" src="pics/bigkitty.jpg" alt="Bigger kitty smiling">
 </body>
 </html> 
