--- a/hobbies.html
+++ b/hobbies.html
@@ -32,11 +32,11 @@
     <p>My most favortie thing to do is go out to eat. Some of my favorties resuturants right now are...Planta Queen, Alla Vita, Duck Duck Goat and Ken Kee</p>
     </section>
         <img class="food-img" src="pics/friends.JPG" alt="Friends out eating">
-        <img class="food-img" src="pics/sushi.JPG" alt="Cool Veggie sushi">
-        <img class="food-img" src="pics/ramen.JPG" alt="Bowl of ramen">
+        <img class="food-img" src="pics/sushi.jpg" alt="Cool Veggie sushi">
+        <img class="food-img" src="pics/ramen.jpg" alt="Bowl of ramen">
         <img class="food-img" src="pics/pasta.jpg" alt="Bowl of vodka pasta">
         <img class="food-img" src="pics/veggie.jpg" alt="Fried cauliflower">
-        <img class="food-img" src="pics/piggy.JPG" alt="Yummy piggy buns">
+        <img class="food-img" src="pics/piggy.jpg" alt="Yummy piggy buns">
     <section id="movie-section">
     <h4>Movies and Shows</h4>
     <p>I love watching movies. Some of my favorites are LaLa Land, Star Wars, any Wes Anderson movie and Studio Ghibli movies.</p>
