--- a/cat.html
+++ b/cat.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Naviagtion</title>
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" type="text/css" href="css/normalize.css">
-  <link href="https://fonts.googleapis.com/css2?family=Lilita+One&amp;display=swap" rel="stylesheet">
-</head>
-<body id="cat-body">
-  <header>  
+  <head>
+    <meta charset="UTF-8">
+    <title>Navigation</title>
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lilita+One&amp;display=swap" rel="stylesheet">
+  </head>
+  <body id="cat-body">
+    <header>  
       <nav id="main-navbar">
         <div id="navbar-container">
           <ul>
             <li><a href="nav.html">Home</a></li>
-            <li><a href="resume.html" >Resume</a></li>
+            <li><a href="resume.html">Resume</a></li>
             <li id="onpage"><a href="#">My Cat</a></li>
             <li><a href="hobbies.html">Hobbies</a></li>
           </ul>
@@ -21,14 +21,14 @@
       </nav>
     </header>
     <section id="cat-section">
-	<h2>My Kitty!</h2>
-	<h3>This is my kitty Benji! He is a black cat and very goofy!</h3>
-    <p>We got my cat about two years ago from a pound. He was the last kitten in his litter and a runt.</p>
-    <p>I got him for Chirstmas, his origanal name was Christams Tree!</p>
-    <p>He loves napping and playing outside with my dog Biscuit. Also hiding in boxes!</p>
+      <h2>My Kitty!</h2>
+      <h3>This is my kitty Benji! He is a black cat and very goofy!</h3>
+      <p>We got my cat about two years ago from a pound. He was the last kitten in his litter and a runt.</p>
+      <p>I got him for Christmas, his original name was Christmas Tree!</p>
+      <p>He loves napping and playing outside with my dog Biscuit. Also hiding in boxes!</p>
     </section>
-	<img class="cat-img" src="pics/kitty1.jpg" alt="Cute Kitty">
-	<img class="cat-img" src="pics/kittyeyes.jpg" alt="Tiny kitty in a glass">
-	<img class="cat-img" src="pics/bigkitty.jpg" alt="Bigger kitty smiling">
-</body>
+    <img class="cat-img" src="pics/kitty1.jpg" alt="Cute Kitty">
+    <img class="cat-img" src="pics/kittyeyes.jpg" alt="Tiny kitty in a glass">
+    <img class="cat-img" src="pics/bigkitty.jpg" alt="Bigger kitty smiling">
+  </body>
 </html> 
