--- a/cat.html
+++ b/cat.html
@@ -16,6 +16,7 @@
             <li><a href="resume.html">Resume</a></li>
             <li id="onpage"><a href="#">My Cat</a></li>
             <li><a href="hobbies.html">Hobbies</a></li>
+			<li><a href="map.html">Map</a></li>
           </ul>
         </div>
       </nav>
