--- a/resume.html
+++ b/resume.html
@@ -16,6 +16,7 @@
             <li id="onpage"><a href="#">Resume</a></li>
             <li><a href="cat.html">My Cat</a></li>
             <li><a href="hobbies.html">Hobbies</a></li>
+			<li><a href="map.html">Map</a></li>
           </ul>
         </div>
       </nav>
