adding css for slider

--- a/hobbies.html
+++ b/hobbies.html
@@ -46,7 +46,12 @@
     <section id="travelling-section">
       <h4>Traveling</h4>
       <p>Traveling is probably my favorite thing to do. I have been all over! My favorites recently being; Italy, Germany and Greece</p>
-		<img class="plane-img" src="pics/plane.jpg" alt="Plane with clouds">
+    <div class="images-slideshow">
+      <div class="imageSlides fade">
+        <img src="pics/plane.jpg" alt="Plane with clouds">
+      <a class="slider-btn previous" onclick="setSlides(-1)">❮</a>
+      <a class="slider-btn next" onclick="setSlides(1)">❯</a>
+    </div>
     </section>
     <section id="music-section">
 	<h4>Music</h4>
