--- a/hobbies.html
+++ b/hobbies.html
@@ -49,6 +49,30 @@
     <div class="images-slideshow">
       <div class="imageSlides fade">
         <img src="pics/plane.jpg" alt="Plane with clouds">
+	  <div class="imageSlides fade">
+        <img src="pics/castel.jpg" alt="Castle in Germany">
+	  <div class="imageSlides fade">
+        <img src="pics/newyork.jpg" alt="Times sqaure">
+	  <div class="imageSlides fade">
+        <img src="pics/italy.jpg" alt="Me in Italy">
+	  <div class="imageSlides fade">
+        <img src="pics/flowercat.jpg" alt="Cat with flowers">
+	  <div class="imageSlides fade">
+        <img src="pics/germany.jpg" alt="Clock in Germnay">
+	  <div class="imageSlides fade">
+        <img src="pics/hiking.jpg" alt="Hiking">
+	  <div class="imageSlides fade">
+        <img src="pics/nightcastel.jpg" alt="Germany castle at night">
+	  <div class="imageSlides fade">
+        <img src="pics/me.jpg" alt="Beach in Greece">
+	  <div class="imageSlides fade">
+        <img src="pics/sunset.jpg" alt="Sunset">
+	  <div class="imageSlides fade">
+        <img src="pics/tree.jpg" alt="Tree">
+	  <div class="imageSlides fade">
+        <img src="pics/waves.jpg" alt="Waves">
+	  <div class="imageSlides fade">
+        <img src="pics/yellowcastel.jpg" alt="Another castle">
       <a class="slider-btn previous" onclick="setSlides(-1)">❮</a>
       <a class="slider-btn next" onclick="setSlides(1)">❯</a>
     </div>
