--- a/hobbies.html
+++ b/hobbies.html
@@ -60,11 +60,11 @@
 	  <div class="imageSlides fade">
         <img src="pics/germany.jpg" alt="Clock in Germnay">
 	  <div class="imageSlides fade">
-        <img src="pics/hiking.jpg" alt="Hiking">
+        <img src="pics/hiking.jpeg" alt="Hiking">
 	  <div class="imageSlides fade">
         <img src="pics/nightcastel.jpg" alt="Germany castle at night">
 	  <div class="imageSlides fade">
-        <img src="pics/me.jpg" alt="Beach in Greece">
+        <img src="pics/me.png" alt="Beach in Greece">
 	  <div class="imageSlides fade">
         <img src="pics/sunset.jpg" alt="Sunset">
 	  <div class="imageSlides fade">
