--- a/hobbies.html
+++ b/hobbies.html
@@ -50,7 +50,7 @@
       <div class="imageSlides fade">
         <img src="pics/plane.jpg" alt="Plane with clouds">
 	  <div class="imageSlides fade">
-        <img src="pics/castel.jpg" alt="Castle in Germany">
+        <img src="pics/castel.JPG" alt="Castle in Germany">
 	  <div class="imageSlides fade">
         <img src="pics/newyork.jpg" alt="Times sqaure">
 	  <div class="imageSlides fade">
@@ -60,11 +60,11 @@
 	  <div class="imageSlides fade">
         <img src="pics/germany.jpg" alt="Clock in Germnay">
 	  <div class="imageSlides fade">
-        <img src="pics/hiking.jpeg" alt="Hiking">
+        <img src="pics/hiking.JPEG" alt="Hiking">
 	  <div class="imageSlides fade">
         <img src="pics/nightcastel.jpg" alt="Germany castle at night">
 	  <div class="imageSlides fade">
-        <img src="pics/me.png" alt="Beach in Greece">
+        <img src="pics/me.PNG" alt="Beach in Greece">
 	  <div class="imageSlides fade">
         <img src="pics/sunset.jpg" alt="Sunset">
 	  <div class="imageSlides fade">
