--- a/cat.html
+++ b/cat.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lilita+One&amp;display=swap" rel="stylesheet">
+	<script async type="text/javascript" src="js/scriptt.js"></script>
   </head>
   <body id="cat-body">
     <header>  
