--- a/hobbies.html
+++ b/hobbies.html
@@ -46,38 +46,96 @@
     </section>
     <section id="travelling-section">
       <h4>Traveling</h4>
-      <p>Traveling is probably my favorite thing to do. I have been all over! My favorites recently being; Italy, Germany and Greece</p>
-    <div class="images-slideshow">
-      <div class="imageSlides fade">
-        <img src="pics/plane.jpg" alt="Plane with clouds">
-	  <div class="imageSlides fade">
-        <img src="pics/castel.JPG" alt="Castle in Germany">
-	  <div class="imageSlides fade">
-        <img src="pics/newyork.jpg" alt="Times sqaure">
-	  <div class="imageSlides fade">
-        <img src="pics/italy.jpg" alt="Me in Italy">
-	  <div class="imageSlides fade">
-        <img src="pics/flowercat.jpg" alt="Cat with flowers">
-	  <div class="imageSlides fade">
-        <img src="pics/germany.jpg" alt="Clock in Germnay">
-	  <div class="imageSlides fade">
-        <img src="pics/hiking.JPEG" alt="Hiking">
-	  <div class="imageSlides fade">
-        <img src="pics/nightcastel.jpg" alt="Germany castle at night">
-	  <div class="imageSlides fade">
-        <img src="pics/me.PNG" alt="Beach in Greece">
-	  <div class="imageSlides fade">
-        <img src="pics/sunset.jpg" alt="Sunset">
-	  <div class="imageSlides fade">
-        <img src="pics/tree.jpg" alt="Tree">
-	  <div class="imageSlides fade">
-        <img src="pics/waves.jpg" alt="Waves">
-	  <div class="imageSlides fade">
-        <img src="pics/yellowcastel.jpg" alt="Another castle">
-      <a class="slider-btn previous" onclick="setSlides(-1)">❮</a>
-      <a class="slider-btn next" onclick="setSlides(1)">❯</a>
+      <p>Traveling is probably my favorite thing to do. I have been all over! My favorites recently being; Italy, Germany and Greece</p>\
+    <div class="slideshow-container">
+    <div class="mySlides fade">
+      <div class="numbertext">1 / 13</div>
+         <img src="pics/plane.jpg" alt="Plane with clouds">
+      <div class="text">Caption Text</div>
     </div>
-    </section>
+
+    <div class="mySlides fade">
+      <div class="numbertext">2 / 13</div>
+        <img src="pics/castel.JPG" alt="Castle in Germany">
+      <div class="text">Caption Two</div>
+    </div>
+
+    <div class="mySlides fade">
+      <div class="numbertext">3 / 13</div>
+        <img src="pics/newyork.jpg" alt="Times sqaure">
+      <div class="text">Caption Three</div>
+    </div>
+    <div class="mySlides fade">
+      <div class="numbertext">4 / 13</div>
+          <img src="pics/italy.jpg" alt="Me in Italy">
+      <div class="text">Caption Three</div>
+    </div>
+    <div class="mySlides fade">
+      <div class="numbertext">5 / 13</div>
+        <img src="pics/flowercat.jpg" alt="Cat with flowers">
+    <div class="text">Caption Three</div>
+    </div>
+     <div class="mySlides fade">
+       <div class="numbertext">6 / 13</div>
+        <img src="pics/germany.jpg" alt="Clock in Germnay">
+       <div class="text">Caption Three</div>
+    </div>
+      <div class="mySlides fade">
+    <div class="numbertext">7 / 13</div>
+        <img src="pics/hiking.JPEG" alt="Hiking">
+    <div class="text">Caption Three</div>
+  </div>
+  <div class="mySlides fade">
+    <div class="numbertext">8 / 13</div>
+        <img src="pics/nightcastel.jpg" alt="Germany castle at night">
+    <div class="text">Caption Three</div>
+  </div>
+  <div class="mySlides fade">
+    <div class="numbertext">9 / 13</div>
+        <img src="pics/me.PNG" alt="Beach in Greece">
+    <div class="text">Caption Three</div>
+  </div>
+  <div class="mySlides fade">
+    <div class="numbertext">10 / 13</div>
+        <img src="pics/sunset.jpg" alt="Sunset">
+    <div class="text">Caption Three</div>
+  </div>
+  <div class="mySlides fade">
+    <div class="numbertext">11 / 13</div>
+        <img src="pics/tree.jpg" alt="Tree">
+    <div class="text">Caption Three</div>
+  </div>
+  <div class="mySlides fade">
+    <div class="numbertext">12 / 13</div>
+        <img src="pics/waves.jpg" alt="Waves">
+    <div class="text">Caption Three</div>
+  </div>
+  <div class="mySlides fade">
+    <div class="numbertext">13 / 13</div>
+        <img src="pics/yellowcastel.jpg" alt="Another castle">
+    <div class="text">Caption Three</div>
+  </div>
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+<br>
+
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span>
+  <span class="dot" onclick="currentSlide(2)"></span>
+  <span class="dot" onclick="currentSlide(3)"></span>
+  <span class="dot" onclick="currentSlide(4)"></span>
+  <span class="dot" onclick="currentSlide(5)"></span>
+  <span class="dot" onclick="currentSlide(6)"></span>
+  <span class="dot" onclick="currentSlide(7)"></span>
+  <span class="dot" onclick="currentSlide(8)"></span>
+  <span class="dot" onclick="currentSlide(9)"></span>
+  <span class="dot" onclick="currentSlide(10)"></span>
+  <span class="dot" onclick="currentSlide(11)"></span>
+  <span class="dot" onclick="currentSlide(12)"></span>
+  <span class="dot" onclick="currentSlide(13)"></span>
+</div>
+   </section>
     <section id="music-section">
 	<h4>Music</h4>
 	<p>I love music, some of my favorite artists are... Tyler the Creator, the Marias, TV Girl and Crumb</p>
