--- a/hobbies.html
+++ b/hobbies.html
@@ -46,7 +46,7 @@
     </section>
     <section id="travelling-section">
       <h4>Traveling</h4>
-      <p>Traveling is probably my favorite thing to do. I have been all over! My favorites recently being; Italy, Germany and Greece</p>\
+      <p>Traveling is probably my favorite thing to do. I have been all over! My favorites recently being; Italy, Germany and Greece</p>
     <div class="slideshow-container">
     <div class="mySlides fade">
       <div class="numbertext">1 / 13</div>
