--- a/hobbies.html
+++ b/hobbies.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lilita+One&amp;display=swap" rel="stylesheet">
 	<script async type="text/javascript" src="js/scriptt.js"></script>
+	<script async type="text/javascript" src="js/slideshow.js"></script>
   </head>
   <body id="hobbie-body">
   <header>  
