--- a/map.html
+++ b/map.html
@@ -21,7 +21,14 @@
           </ul>
         </div>
       </nav>
-    </header>
+	<section>
+    <div id="wrapper">
+      <div id="canvas"></div>
+    </div>
+    </section>
+    
+	
+	</header>
 	<h1>My First Google Map</h1>
 
 <div id="googleMap" style="width:100%;height:400px;"></div>
