--- a/map.html
+++ b/map.html
@@ -23,7 +23,8 @@
       </nav>
 	<section>
     <div id="wrapper">
-      <div id="canvas"></div>
+    <div id="canvas"></div>
+	<div id="map"></div>
     </div>
     </section>
 </body>
