--- a/map.html
+++ b/map.html
@@ -25,6 +25,8 @@
     <div id="wrapper">
     <div id="canvas"></div>
 	<div id="map"></div>
+	<script src="https://maps.googleapis.com/maps/api/js?AIzaSyBM1F-BpX660SBK3-Vw9O9f7AEvTAIH8rI&callback=initMap"
+    async defer></script>
     </div>
     </section>
 </body>
