--- a/map.html
+++ b/map.html
@@ -21,13 +21,19 @@
           </ul>
         </div>
       </nav>
-	<section>
     <div id="wrapper">
     <div id="canvas"></div>
 	<div id="map"></div>
-	<script src="https://maps.googleapis.com/maps/api/js?AIzaSyBM1F-BpX660SBK3-Vw9O9f7AEvTAIH8rI&callback=initMap"
+    <script>
+      var map;
+      function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+          center: {lat: -34.397, lng: 150.644},
+          zoom: 8
+        });
+      }
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?AIzaSyBM1F-BpX660SBK3-Vw9O9f7AEvTAIH8rI&callback=initMap"
     async defer></script>
-    </div>
-    </section>
 </body>
 </html>
