--- a/map.html
+++ b/map.html
@@ -21,7 +21,7 @@
           </ul>
         </div>
       </nav>
-    <div id="wrapper">
+    <div id="wrapper"></div>
     <div id="canvas"></div>
 	<div id="map"></div>
 </body>
