--- a/map.html
+++ b/map.html
@@ -21,8 +21,10 @@
           </ul>
         </div>
       </nav>
-    <div id="wrapper"></div>
-    <div id="canvas"></div>
+    <div id="wrapper">
+    <div id="canvas">
 	<div id="map"></div>
+	</div>
+	</div>
 </body>
 </html>
