--- a/map.html
+++ b/map.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lilita+One&amp;display=swap" rel="stylesheet">
-	<script async type="text/javascript" src="js/script.js"></script>
+	<script async src="js/script.js"></script>
   </head>
   <body id="map-body">
     <header>  
@@ -22,9 +22,7 @@
         </div>
       </nav>
     <div id="wrapper">
-    <div id="canvas">
-	<div id="map"></div>
-	</div>
-	</div>
+    <div id="canvas"></div>
+  </div>
 </body>
 </html>
