--- a/map.html
+++ b/map.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Naviagtion</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lilita+One&amp;display=swap" rel="stylesheet">
 	<script async src="js/script.js"></script>
   </head>
