--- a/hobbies.html
+++ b/hobbies.html
@@ -48,6 +48,7 @@
     <section id="travelling-section">
       <h4>Traveling</h4>
       <p>Traveling is probably my favorite thing to do. I have been all over! My favorites recently being; Italy, Germany and Greece</p>
+    <section id="slide">
 <div class="slideshow">
     <div class="mySlides fade">
       <div class="numbertext">1 / 13</div>
@@ -106,6 +107,7 @@
   <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
   <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div>
+</section>
 <br>
 
 <div style="text-align:center">
