--- a/map.html
+++ b/map.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lilita+One&amp;display=swap" rel="stylesheet">
+    <script src="https://maps.googleapis.com/maps/api/js?AIzaSyBg29O6AX-ohhl8F5kfC5lT0-qw7Fg2giQ&callback=initMap"></script>
 	<script async src="js/script.js"></script>
   </head>
   <body id="map-body">
