--- a/map.html
+++ b/map.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lilita+One&amp;display=swap" rel="stylesheet">
-    <script src="https://maps.googleapis.com/maps/api/js?AIzaSyBg29O6AX-ohhl8F5kfC5lT0-qw7Fg2giQ&callback=initMap"></script>
 	<script async src="js/script.js"></script>
   </head>
   <body id="map-body">
@@ -23,13 +22,8 @@
         </div>
       </nav>
 	 </header>
-    <div id="wrapper">
-    <div id="canvas"></div>
-	<div id="map"></div>
-    <!-- Loads the API with my API key -->
-    <script>(g=>{var h,a,k,p="The Google Maps JavaScript API",c="google",l="importLibrary",q="__ib__",m=document,b=window;b=b[c]||(b[c]={});var d=b.maps||(b.maps={}),r=new Set,e=new URLSearchParams,u=()=>h||(h=new Promise(async(f,n)=>{await (a=m.createElement("script"));e.set("libraries",[...r]+"");for(k in g)e.set(k.replace(/[A-Z]/g,t=>"_"+t[0].toLowerCase()),g[k]);e.set("callback",c+".maps."+q);a.src=`https://maps.${c}apis.com/maps/api/js?`+e;d[q]=f;a.onerror=()=>h=n(Error(p+" could not load."));a.nonce=m.querySelector("script[nonce]")?.nonce||"";m.head.append(a)}));d[l]?console.warn(p+" only loads once. Ignoring:",g):d[l]=(f,...n)=>r.add(f)&&u().then(()=>d[l](f,...n))})
-        ({key: "AIzaSyBg29O6AX-ohhl8F5kfC5lT0-qw7Fg2giQ", v: "weekly"});</script>
-	</body>
+	<div id="googleMap"></div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBg29O6AX-ohhl8F5kfC5lT0-qw7Fg2giQ&callback=myMap"></script>
   </div>
 </body>
 </html>
