--- a/map.html
+++ b/map.html
@@ -22,8 +22,10 @@
         </div>
       </nav>
 	 </header>
-	<div id="googleMap"></div>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBg29O6AX-ohhl8F5kfC5lT0-qw7Fg2giQ&callback=myMap"></script>
-  </div>
+     <div id="map"></div>    
+     <script async
+         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBg29O6AX-ohhl8F5kfC5lT0-qw7Fg2giQ&callback=initMap">
+    </script>   
+   </div>
 </body>
 </html>
