--- a/map.html
+++ b/map.html
@@ -23,12 +23,14 @@
       </nav>
 	 </header>
 	 <div id="wrapper">
-      <div id="canvas"></div>
+      <div id="canvas">
     
-    <div id="map"></div>    
+    <div id="map">    
      <script async
          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBg29O6AX-ohhl8F5kfC5lT0-qw7Fg2giQ&callback=initMap">
     </script>   
+   </div>
+   </div>
    </div>
    </div>
 </body>
