--- a/nav.html
+++ b/nav.html
@@ -30,7 +30,7 @@
     <section id="name-info">
       <h3>My name is Althea Barbato!</h3>
       <p>I am a first year ITM student from Chicago</p>
-      <p>Hope you enjoy my project</p>
+      <p>Hope you enjoy my project!</p>
     </section>
     </div>
 </body>
